# gql-samplesrv.rs

./: .env  .gitignore  Cargo.toml  LICENSE  README-JP.md  README.md
migrations/2020-11-27-141424_create_posts/: down.sql  up.sql
src/: config.rs  gql_schema.rs  lib.rs  main.rs  routes.rs  schema.rs
src/gqlweb/: graphql.rs  index.rs  mod.rs
src/http/: mod.rs
tests/: main.rs
