[package]
name = "gql_samplesrv"
description = "GraphQL sample server written in Rust"
readme = "README.md"
repository = "https://github.com/YuzuRyo61/gql_samplesrv.rs"
license = "MIT"
version = "0.1.0"
authors = ["YuzuRyo61 <yuzuryo61@yuzulia.work>"]
edition = "2018"
keywords = ["sample", "graphql", "web", "server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
juniper = "0.14.2"
actix-web = "3"
actix-cors = "0.5.3"
actix-rt = "1.1.1"
